# DSPi

./: .gitignore  DESIGN.md  PLAN.md  README.md  ROADMAP.md  RP2350-support.md  TESTING.md  claude_fixes.md  pdm_analysis.md  report.md
.github/: FUNDING.yml
Documentation/: Roadmap.md  current_architecture.md
Documentation/Features/: Roadmap (Q1-Q3 2026).md  SPDIF_input_spec.md  band_bypass_spec.md  buffer_statistics_spec.md  core1_modes_spec.md  device_identification_spec.md  firmware_update.md  i2s_input_spec.md  i2s_output_spec.md  input_switching_spec.md  master_volume_spec.md  matrixmixer.md  notification_protocol_v2_spec.md  peak_clip_metering_spec.md  per_channel_preamp_spec.md  roadmap.md  spdif_starvation_spec.md  usb_errors_spec.md  user_presets_spec.md  volume_leveller_spec.md
Documentation/References/: PICO.AUDIO.I2S.docx  PICO_AUDIO.rtf
build-rp2040/foxdac/: foxdac.dis  foxdac.elf  foxdac.elf.map  foxdac.hex  foxdac.uf2
build-rp2040/foxdac/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build-rp2040/foxdac/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build-rp2040/pico_extras/src/rp2_common/pico_audio_spdif/: audio_spdif.pio.h
build-rp2350/: QC-RP2350-port-2026-01-31.md
build-rp2350/.claude/agents/: code-quality-auditor.md
build-rp2350/foxdac/: foxdac.dis  foxdac.elf  foxdac.elf.map  foxdac.hex  foxdac.uf2
build-rp2350/pico_extras/src/rp2_common/pico_audio_spdif/: audio_spdif.pio.h
build-rp2350/pioasm/: pioasm
firmware/: CMakeLists.txt
firmware/DSPi/: CMakeLists.txt  asrc.c  asrc.h  asrc_coeffs_rp2040.h  asrc_coeffs_rp2350.h  audio_input.c  audio_input.h  audio_pipeline.c  audio_pipeline.h  bulk_params.c  bulk_params.h  config.h  control_executor.h  control_transport.c  control_transport.h  crossfeed.c  crossfeed.h  dcp_inline.h  dsp_pipeline.c  dsp_pipeline.h  dsp_process_rp2040.S  flash_clkdiv.c  flash_clkdiv.h  flash_storage.c  flash_storage.h  i2s_input.c  i2s_input.h  leveller.c  leveller.h  loudness.c  loudness.h  main.c  notify.c  notify.h  pdm_generator.c  pdm_generator.h  spdif_input.c  spdif_input.h  tusb_config.h  uart_control.c  (+10 more)
firmware/foxdac/: CMakeLists.txt  config.h  crossfeed.c  dcp_inline.h  dsp_pipeline.c  dsp_pipeline.h  dsp_process_rp2040.S  flash_storage.c  loudness.c  loudness.h  main.c  pdm_generator.c  pdm_generator.h  spdif_input.c  spdif_input.h  systick.c  systick.h  tusb_config.h  usb_audio.c  usb_audio.h  usb_descriptors.c  usb_descriptors.h  usb_spdif.c
firmware/pico-extras/src/common/pico_audio/: audio.cpp
firmware/pico-extras/src/common/pico_audio/include/pico/: audio.h  sample_conversion.h
firmware/pico-extras/src/rp2_common/pico_audio_i2s_multi/: CMakeLists.txt  audio_i2s_24.pio  audio_i2s_24_slave.pio  audio_i2s_clkout.pio  audio_i2s_clkout_only.pio  audio_i2s_datain.pio  audio_i2s_dataout.pio  audio_i2s_multi.c  audio_mck.pio
firmware/pico-extras/src/rp2_common/pico_audio_i2s_multi/include/pico/: audio_i2s_multi.h
firmware/pico-extras/src/rp2_common/pico_audio_spdif/: audio_spdif.c  sample_encoding.cpp
firmware/pico-extras/src/rp2_common/pico_audio_spdif_multi/: CMakeLists.txt  audio_spdif.c  sample_encoding.cpp
firmware/pico-extras/src/rp2_common/pico_audio_spdif_multi/include/pico/: audio_spdif.h
firmware/pico-extras/src/rp2_common/pico_audio_spdif_multi/include/pico/audio_spdif/: sample_encoding.h
firmware/pico-extras/src/rp2_common/pico_spdif_rx/: CMakeLists.txt  spdif_rx.c  spdif_rx.h  spdif_rx_192000.pio  spdif_rx_96000.pio
firmware/pico-extras/src/rp2_common/pico_spdif_rx/include/: spdif_rx.h
firmware/pico-extras/src/rp2_common/usb_device/: usb_device.c
tests/: SCENARIOS.md  TESTS.md
tools/: compare_filter.py  control_parity_tests.py  dspi_control_common.py  dspi_control_examples.md  dspi_i2c_control_test.py  dspi_uart_control_test.py  example_filter.py  uart_control.py
